--- a/prog2/frontend/index.html
+++ b/prog2/frontend/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="../css/estilos.css">
-  <title>Page Title</title>
+    <title>Page Title</title>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" href="../css/estilos.css">
+
 </head>
 <body>
   <div class="grid-container">
