--- a/prog2/testes/tela6.html
+++ b/prog2/testes/tela6.html
@@ -8,7 +8,7 @@
 
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="estilo1.css">
-        <link rel="stylesheet" href="tela1.css">
+        <link rel="stylesheet" href="tela6.css">
     </head>
 
     <body>
@@ -17,8 +17,8 @@
             <header class="grid-conteiner">
                 <div id="categorias">CAT</div>
                 <div id="logo">LOGO</div>
-                <div id="cadastro">CAD</div>
-                <div id="login">LOGIN</div>
+                <div id="perfil">PERF</div>
+                <div id="sair">SAIR</div>
 
                 <div id="pesquisa">PESQ</div>
 
