--- a/prog2/frontend/tela6.html
+++ b/prog2/frontend/tela6.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="estilo1.css">
-        <link rel="stylesheet" href="tela6.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/estilo1.css">
+        <link rel="stylesheet" href="css/tela6.css">
     </head>
 
     <body>
@@ -29,61 +29,61 @@
 
             <main class="grid-conteiner">
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Shampoo</p>
                     <p>R$ 60,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Máscara</p>
                     <p>R$ 30,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Shampoo</p>
                     <p>R$ 50,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
 
                 <div class="produto">
-                    <img src="../frontend/img/perfume.png">
+                    <img src="img/perfume.png">
                     <p>Perfume Ferrari masculino</p>
                     <p>R$ 80,00</p>
                 </div>
