correcoes nas telas 9 e 10

--- a/prog2/frontend/tela9.html
+++ b/prog2/frontend/tela9.html
@@ -7,7 +7,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <link rel="stylesheet" href="css/reset.css">
+
+        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
+
         <link rel="stylesheet" href="css/tela9.css">
     </head>
 
