--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -7,7 +7,11 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <link rel="stylesheet" href="css/reset.css">
+
+        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
+        <link rel="stylesheet" href="css/estilo3.css">
+
         <link rel="stylesheet" href="css/tela10.css">
     </head>
 
@@ -28,6 +32,12 @@
                 <div id="categorias">CATEGORIAS</div>
             </header>
 
+            <main class="grid-conteiner">
+                <div id="tabela">
+                    TABELA
+                </div>
+                <div id="add-produto">ADD</div>
+            </main>
 
         </div>
 
