--- a/prog2/frontend/tela6.html
+++ b/prog2/frontend/tela6.html
@@ -7,7 +7,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <link rel="stylesheet" href="css/reset.css">
+
+        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
+
         <link rel="stylesheet" href="css/tela6.css">
     </head>
 
