--- a/prog2/frontend/tela4.html
+++ b/prog2/frontend/tela4.html
@@ -7,30 +7,13 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
         <link rel="stylesheet" href="css/reset.css">
-
         <link rel="stylesheet" href="css/estilo1.css">
-
         <link rel="stylesheet" href="css/tela4.css">
     </head>
 
     <body>
-      <main class="grid-conteiner">
-        <div class="login">
-
-          <form action="#">
-            <div class="usuario">
-              <span><img src="img/senha.png"></span>
-              <input type="text" name="fname"><br>
-            </div>
-            <div class="senha">
-              <span><img src="img/senha.png"></span><input type="text" name="lname"><br>
-            </div>
-              <input type="submit" value="Submit">
-            </form>
-
-        </div>
-
-      </main>
-
+      <div class="grid-conteiner">
+        <div class="login"></div>
+      </div>
     </body>
 </html>
