--- a/prog2/frontend/tela12.html
+++ b/prog2/frontend/tela12.html
@@ -11,8 +11,9 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo4.css">
+        <link rel="stylesheet" href="css/estilo5.css">
 
-        <link rel="stylesheet" href="css/tela9.css">
+        <link rel="stylesheet" href="css/tela12.css">
     </head>
 
     <body>
@@ -29,7 +30,22 @@
                 <div id="sair">SAIR</div>
             </header>
 
+            <main class="grid-conteiner">
+                <form class="grid-conteiner" action="index.html" method="post">
+                    HA
+                    <div id="titulo">
+                        CADASTRO
+                    </div>
 
+                    <div id="formulario">
+                        FORMULARIO
+                    </div>
+
+                    <div id="envio">
+                        ENVIO
+                    </div>
+                </form>
+            </main>
         </div>
 
     </body>
