--- a/prog2/frontend/tela3.html
+++ b/prog2/frontend/tela3.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
+        <link rel="stylesheet" href="css/estilo6.css">
         <link rel="stylesheet" href="css/tela2.css">
     </head>
 
