--- a/prog2/frontend/tela13.html
+++ b/prog2/frontend/tela13.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/estilo4.css">
         <link rel="stylesheet" href="css/estilo5.css">
 
-        <link rel="stylesheet" href="css/tela12.css">
+        <link rel="stylesheet" href="css/tela13.css">
     </head>
 
     <body>
@@ -32,7 +32,7 @@
 
             <main class="grid-conteiner">
                 <div id="titulo">
-                    CADASTRO
+                    ALTERACAO
                 </div>
 
                 <div class="grid-conteiner" id="formulario">
@@ -66,7 +66,8 @@
                 </div>
 
                 <div class="grid-conteiner" id="envio">
-                    <input id="i-cadastrar" type="submit" name="" value="CADASTRAR" form="form">
+                    <input type="submit" id="i-excluir" name="" value="EXCLUIR" form="form">
+                    <input type="submit" id="i-alterar" name="" value="ALTERAR" form="form">
                 </div>
             </main>
         </div>
