--- a/prog2/frontend/tela7.html
+++ b/prog2/frontend/tela7.html
@@ -8,6 +8,7 @@
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/estilo1.css">
+        <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/tela7.css">
     </head>
 
