--- a/prog2/frontend/tela4.html
+++ b/prog2/frontend/tela4.html
@@ -13,7 +13,15 @@
 
     <body>
       <div class="grid-conteiner">
-        <div class="login"></div>
+        <div class="login">
+            <div class="logo">
+                <img src="img/vitari.jpg" width="400px" height="200px">
+            </div>
+            <div class="entrada">
+                <input type="text" name="usuario" id="usuario" placeholder="Login" autofocus><br>
+                <input type="password" name="senha" id="senha" placeholder="Senha">
+            </div>
+        </div>
       </div>
     </body>
 </html>
