inserindo barra de pesquisa

--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo3.css">
+        <link rel="stylesheet" href="css/estilo7.css">
 
         <link rel="stylesheet" href="css/tela10.css">
     </head>
@@ -28,7 +29,12 @@
                 <div id="perfil">PERF</div>
                 <div id="sair">SAIR</div>
 
-                <div id="pesquisa">PESQUISA</div>
+                <div id="pesquisa">
+                    <div id="divBusca">
+                        <input type="text" id="txtBusca" placeholder="Pesquisar..."/>
+                        <img src="img/lupa.png" id="btnBusca" width="16" height="16" alt="Buscar"/>
+                    </div>
+                </div>
             </header>
 
             <main class="grid-conteiner">
