--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
         <link rel="stylesheet" href="css/tela2.css">
+        <!--<link rel="stylesheet" href="css/estilo7.css">-->
     </head>
 
     <body>
@@ -22,7 +23,12 @@
                 <div id="cadastro">CAD</div>
                 <div id="login">LOGIN</div>
 
-                <div id="pesquisa">PESQ</div>
+                <div id="pesquisa">
+                    <div id="divBusca">
+                        <input type="text" id="txtBusca" placeholder="Pesquisar..."/>
+                        <img src="img/lupa.png" id="btnBusca" width="16" height="16" alt="Buscar"/>
+                    </div>
+                </div>
 
                 <div id="barra-categorias">
                     BARRA
