--- a/prog2/frontend/tela3.html
+++ b/prog2/frontend/tela3.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
         <link rel="stylesheet" href="css/estilo6.css">
+        <link rel="stylesheet" href="css/estilo7.css">
         <link rel="stylesheet" href="css/tela2.css">
     </head>
 
@@ -21,7 +22,12 @@
                 <div id="logo">LOGO</div>
                 <div id="cadastro">CAD</div>
                 <div id="login">LOGIN</div>
-                <div id="pesquisa">PESQ</div>
+                <div id="pesquisa">
+                    <div id="divBusca">
+                        <input type="text" id="txtBusca" placeholder="Pesquisar..."/>
+                        <img src="img/lupa.png" id="btnBusca" width="16" height="16" alt="Buscar"/>
+                    </div>
+                </div>
                 <div id="barra-categorias">
                     BARRA
                 </div>
