--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -10,8 +10,10 @@
 
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo1.css">
+        <link rel="stylesheet" href="css/estilo7.css">
+
         <link rel="stylesheet" href="css/tela2.css">
-        <!--<link rel="stylesheet" href="css/estilo7.css">-->
+
     </head>
 
     <body>
