--- a/prog2/frontend/tela4.html
+++ b/prog2/frontend/tela4.html
@@ -15,7 +15,7 @@
       <div class="grid-conteiner">
         <div class="login">
             <div class="logo">
-                <img src="img/vitari.jpg" width="400px" height="200px">
+                <img src="img/vitari.jpg">
             </div>
             <div class="entrada">
                 <input type="text" name="usuario" id="usuario" placeholder="Login" autofocus><br>
