Adicionado logo nas telas

--- a/prog2/frontend/tela1.html
+++ b/prog2/frontend/tela1.html
@@ -20,7 +20,9 @@
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
                 <div id="categorias">CAT</div>
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="img/vitari.jpg">
+                </div>
                 <div id="cadastro">CAD</div>
                 <div id="login">LOGIN</div>
 
@@ -32,7 +34,7 @@
                 </div>
 
                 <div id="barra-categorias">
-                    BARRA
+                  BARRA
                 </div>
             </header>
 
