--- a/prog2/frontend/tela12.html
+++ b/prog2/frontend/tela12.html
@@ -25,7 +25,9 @@
                 <div id="usuarios">USU</div>
                 <div id="produtos">PROD</div>
 
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="img/vitari.jpg">
+                </div>
                 <div id="perfil">PERF</div>
                 <div id="sair">SAIR</div>
             </header>
