--- a/prog2/frontend/tela13.html
+++ b/prog2/frontend/tela13.html
@@ -24,8 +24,9 @@
                 <div id="opcoes">OPC</div>
                 <div id="usuarios">USU</div>
                 <div id="produtos">PROD</div>
-
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="img/vitari.jpg">
+                </div>
                 <div id="perfil">PERF</div>
                 <div id="sair">SAIR</div>
             </header>
