--- a/prog2/frontend/tela4.html
+++ b/prog2/frontend/tela4.html
@@ -17,10 +17,13 @@
             <div class="logo">
                 <img src="img/vitari.jpg">
             </div>
+
             <div class="entrada">
                 <input type="text" name="usuario" id="usuario" placeholder="Login" autofocus><br>
-                <input type="password" name="senha" id="senha" placeholder="Senha">
+                <input type="password" name="senha" id="senha" placeholder="Senha"><br>
+                <button type="button" name="entrar">Entrar</button>
             </div>
+
         </div>
       </div>
     </body>
