--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -21,7 +21,9 @@
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
                 <div id="categorias">CAT</div>
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="img/vitari.jpg">
+                </div>
                 <div id="cadastro">CAD</div>
                 <div id="login">LOGIN</div>
 
