--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -20,7 +20,9 @@
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
                 <div id="categorias">CAT</div>
-                <div id="logo">LOGO</div>
+                <div id="logo">
+                    <img src="img/vitari.jpg">
+                </div>
                 <div id="perfil">PERF</div>
                 <div id="sair">SAIR</div>
 
