img menu reduzida + comeco do cabecalho das telas

--- a/prog2/frontend/tela12.html
+++ b/prog2/frontend/tela12.html
@@ -21,15 +21,25 @@
         <div class="grid-conteiner" id="tela">
 
             <header class="grid-conteiner">
-                <div id="opcoes">OPC</div>
-                <div id="usuarios">USU</div>
-                <div id="produtos">PROD</div>
+                <div id="opcoes">
+                    <img src="img/menu.png" alt="opcoes">
+                </div>
+                <div id="usuarios">
+                    <button type="button">USUÁRIOS</button>
+                </div>
+                <div id="produtos">
+                    <button type="button">PRODUTOS</button>
+                </div>
 
                 <div id="logo">
-                    <img src="img/vitari.jpg">
+                    <img src="img/vitari.jpg" alt="logo">
                 </div>
-                <div id="perfil">PERF</div>
-                <div id="sair">SAIR</div>
+                <div id="perfil">
+                    <button type="button">PERFIL</button>
+                </div>
+                <div id="sair">
+                    <button type="button">SAIR</button>
+                </div>
             </header>
 
             <main class="grid-conteiner">
