input de pesquisa ajustado

--- a/prog2/frontend/tela11.html
+++ b/prog2/frontend/tela11.html
@@ -11,7 +11,6 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo3.css">
-        <link rel="stylesheet" href="css/estilo7.css">
 
         <link rel="stylesheet" href="css/tela11.css">
     </head>
@@ -42,10 +41,7 @@
                 </div>
 
                 <div id="pesquisa">
-                    <div id="divBusca">
-                        <input type="text" id="txtBusca" placeholder="Pesquisar..."/>
-                        <img src="img/lupa.png" id="btnBusca" width="16" height="16" alt="Buscar"/>
-                    </div>
+                    <input type="text" placeholder="Pesquisar..."/>
                 </div>
             </header>
 
