--- a/prog2/frontend/tela1.html
+++ b/prog2/frontend/tela1.html
@@ -19,7 +19,10 @@
 
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
-                <div id="categorias">CAT</div>
+                <div id="categorias">
+                    <img src="img/menu.png" alt="opcoes">
+
+                </div>
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
