--- a/prog2/frontend/tela3.html
+++ b/prog2/frontend/tela3.html
@@ -11,14 +11,17 @@
         <link rel="stylesheet" href="css/estilo1.css">
         <link rel="stylesheet" href="css/estilo6.css">
         <link rel="stylesheet" href="css/estilo7.css">
-        <link rel="stylesheet" href="css/tela2.css">
+        <link rel="stylesheet" href="css/tela1.css">
     </head>
 
     <body>
 
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
-                <div id="categorias">CAT</div>
+              <div id="categorias">
+                  <img src="img/menu.png" alt="opcoes">
+
+              </div>
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
