--- a/prog2/frontend/tela2.html
+++ b/prog2/frontend/tela2.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/estilo1.css">
         <link rel="stylesheet" href="css/estilo7.css">
 
-        <link rel="stylesheet" href="css/tela2.css">
+        <link rel="stylesheet" href="css/tela1.css">
 
     </head>
 
@@ -20,7 +20,10 @@
 
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
-                <div id="categorias">CAT</div>
+              <div id="categorias">
+                  <img src="img/menu.png" alt="opcoes">
+
+              </div>
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
