--- a/prog2/frontend/tela7.html
+++ b/prog2/frontend/tela7.html
@@ -10,14 +10,17 @@
         <link rel="stylesheet" href="css/estilo1.css">
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo7.css">
-        <link rel="stylesheet" href="css/tela7.css">
+        <link rel="stylesheet" href="css/tela6.css">
     </head>
 
     <body>
 
         <div class="grid-conteiner" id="tela">
             <header class="grid-conteiner">
-                <div id="categorias">CAT</div>
+                <div id="categorias">
+                    <img src="img/menu.png" alt="opcoes">
+
+                </div>
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
