--- a/prog2/frontend/tela11.html
+++ b/prog2/frontend/tela11.html
@@ -34,7 +34,7 @@
                     <img src="img/vitari.jpg" alt="logo">
                 </div>
                 <div id="perfil">
-                    <button type="button">PERFIL</button>
+                    <img src="img/perfil.png" alt="perfil">
                 </div>
                 <div id="sair">
                     <button type="button">SAIR</button>
