--- a/prog2/frontend/tela13.html
+++ b/prog2/frontend/tela13.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo4.css">
         <link rel="stylesheet" href="css/estilo5.css">
+        <link rel="stylesheet" href="css/estilo8.css">
 
         <link rel="stylesheet" href="css/tela13.css">
     </head>
