--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="css/estilo0.css">
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo3.css">
-
+        <link rel="stylesheet" href="css/estilo8.css">
+        
         <link rel="stylesheet" href="css/tela10.css">
     </head>
 
