--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -37,7 +37,15 @@
                 </div>
 
                 <div id="barra-categorias">
-                    BARRA
+                    <nav>
+                      <a href="#">UNHAS</a> |
+                      <a href="#">MAQUIAGEM</a> |
+                      <a href="#">CABELOS</a> |
+                      <a href="#">KITS</a> |
+                      <a href="#">HIGIENE</a> |
+                      <a href="#">PELE</a> |
+                      <a href="#">PERFUME</a>
+                    </nav>
                 </div>
             </header>
 
