--- a/prog2/frontend/tela10.html
+++ b/prog2/frontend/tela10.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/estilo2.css">
         <link rel="stylesheet" href="css/estilo3.css">
         <link rel="stylesheet" href="css/estilo8.css">
-        
+
         <link rel="stylesheet" href="css/tela10.css">
     </head>
 
@@ -47,10 +47,11 @@
             </header>
 
             <main class="grid-conteiner">
-                <div id="tabela">
-                    TABELA
+                <div id="tabela"></div>
+
+                <div id="novo-produto">
+                    <button type="button">NOVO PRODUTO</button>
                 </div>
-                <div id="add-produto">ADD</div>
             </main>
 
         </div>
