--- a/prog2/frontend/tela11.html
+++ b/prog2/frontend/tela11.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div id="pesquisa">
-                    <input type="text" placeholder="Pesquisar..."/>
+                    <input type="text" placeholder="Pesquisar produtos..."/>
                 </div>
             </header>
 
@@ -308,7 +308,9 @@
                     </table>
                 </div>
 
-                <div id="add-produto">ADD</div>
+                <div id="novo-produto">
+                    <button type="button">NOVO PRODUTO</button>
+                </div>
             </main>
 
         </div>
