alteração no header

--- a/prog2/frontend/tela1.html
+++ b/prog2/frontend/tela1.html
@@ -26,8 +26,15 @@
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
-                <div id="cadastro">CAD</div>
-                <div id="login">LOGIN</div>
+                <div id="cadastro">
+                    <a href="#"><img src="img/cadastro.png"></a>
+
+                </div>
+                <div id="login">
+
+                    <a href="#"><img src="img/login.png"></a>
+
+                </div>
 
                 <div id="pesquisa">
                     <div id="divBusca">
