--- a/prog2/frontend/tela8.html
+++ b/prog2/frontend/tela8.html
@@ -26,8 +26,12 @@
                 <div id="logo">
                     <img src="img/vitari.jpg">
                 </div>
-                <div id="perfil">PERF</div>
-                <div id="sair">SAIR</div>
+                <div id="perfil">
+                    <a href="#"><img src="img/default.png"></a>
+                </div>
+                <div id="sair">
+                    <a href="#"><img src="img/sair.png"></a>
+                </div>
 
                 <div id="pesquisa">
                     <div id="divBusca">
